# api-discord-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main_stronakola-api.yml
stronakola/: main.py
stronakola/app/: bot.py  containers.py  endpoints.py  models.py  repository.py  schemas.py  services.py  speachtotext.py
stronakola/cogs/: commands.py
